--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/angular-notifier/styles.css",
               "src/styles.scss"
             ],
             "scripts": []
